he actualizado algo

--- a/ccs/style.css
+++ b/ccs/style.css
@@ -47,7 +47,7 @@ body{
 
 }
 .pie{
-    background-color: blue;
+    background-color: green;
     height: 200px;
     text-align: center;
     border: 2px solid black;
